# webcam-stream

./: CMakeLists.txt  main.cpp
include/gh/: logger.hpp  motion_detector.hpp  owner_ptr.hpp  resource_manager.hpp  utility.hpp  webcam.hpp
include/gh/http/: router.hpp  server.hpp
public/css/: style.css
resources/views/: index.html
src/: server.cpp  webcam.cpp
